--- a/style.css
+++ b/style.css
@@ -12,7 +12,6 @@
 body {
     font-family: 'Poppins', sans-serif;
     height: 100vh;
-    width: 100%;
     background-color: #e5e5e5;
 }
 
@@ -22,7 +21,42 @@ body {
     font-size: 1.5rem;
 }
 
-/* Utility */
+/* ╔════════════════════════════════════════╗ */
+/*         ✨ LAYOUT / STRUCTURE ✨          */
+/* ╚════════════════════════════════════════╝ */
+.main-container {
+    display: grid;
+}
+
+.box {
+    padding: 2em;
+    border-radius: 8px;
+}
+.div1 {
+	grid-area: 1 / 1 / 4 / 3;
+	background-color: rgba(216,47,65, 0.5);
+}
+.div2 {
+	grid-area: 4 / 1 / 7 / 3;
+	background-color: rgba(153,73,123, 0.5);
+}
+.div3 {
+	grid-area: 1 / 3 / 3 / 5;
+	background-color: rgba(24,177,242, 0.5);
+}
+.div4 {
+	grid-area: 1 / 5 / 7 / 7;
+	background-color: rgba(28,153,92, 0.5);
+}
+.div5 {
+	grid-area: 3 / 3 / 7 / 5;
+	background-color: rgba(133,203,79, 0.5);
+}
+
+/* ╔════════════════════════════════════════╗ */
+/*          ✨ UTILITY CLASSES ✨            */
+/* ╚════════════════════════════════════════╝ */
+
 
 a {
     text-decoration: none;
@@ -37,7 +71,11 @@ button {
     border: none;
     font-family: inherit;
 }
-/* Header */
+
+/* ╔════════════════════════════════════════╗ */
+/*               ✨ HEADER ✨                */
+/* ╚════════════════════════════════════════╝ */
+
 
 header {
     width: 100%;
@@ -47,7 +85,10 @@ header {
     opacity: 0.7;
 }
 
-/* Nav */
+/* ╔════════════════════════════════════════╗ */
+/*               ✨ NAV ✨                   */
+/* ╚════════════════════════════════════════╝ */
+
 
 .primary-nav {
     background-color: #ffff;
@@ -138,10 +179,31 @@ header {
 }
 
 
-/* RESPONSIVE smaller screens */
+/* ╔════════════════════════════════════════╗ */
+/*    ✨ responsive - SMALL screens ✨       */
+/* ╚════════════════════════════════════════╝ */
 
 
-@media only screen and (max-width: 725px) {
+@media only screen and (max-width: 825px) {
+
+    .main-container {
+        display: flex;
+        flex-direction: column;
+        border: solid 2px red;
+    }
+
+    /* 
+    .main {
+
+    margin: 0 auto;
+    margin-top: 2em;
+    padding-inline: 2em;
+} */
+
+    .box {
+        min-height: 80px;
+    }
+
     .primary-nav {
         position: fixed;
         bottom: 0;
@@ -167,20 +229,24 @@ header {
         display: none;
     }
 
-    .main-container {
-        display: flex;
-        flex-direction: column;
-    }
-
-    .main {
-    margin: 0 auto;
-    margin-top: 2em;
-    padding-inline: 2em;
 }
-}
-/* Larger screens */
 
-@media only screen and (min-width: 725px) {
+/* ╔════════════════════════════════════════╗ */
+/*    ✨ responsive LARGER screens ONLY ✨   */
+/* ╚════════════════════════════════════════╝ */
+
+
+@media only screen and (min-width: 825px) {
+
+        .main-container {
+            grid-template-rows: repeat(6, 1fr);
+            grid-template-columns: repeat(6, 1fr);
+            gap: 16px;
+            min-height: 88vh;
+            margin: 2rem;
+            padding-left: 4rem; /* Ensures it clears the sidenav */
+            overflow-x: hidden;
+        }
 
 .primary-nav {
     background-color: #ffff;
